fixing vertical alignment issues

--- a/packages/cx-core/src/widgets/form/Field.scss
+++ b/packages/cx-core/src/widgets/form/Field.scss
@@ -81,7 +81,6 @@
                padding: 0 cx-right($padding) 0 cx-left($padding)
             )
          ));
-         vertical-align: middle;
       }
    }
 
