--- a/packages/cx-core/src/widgets/overlay/Window.variables.scss
+++ b/packages/cx-core/src/widgets/overlay/Window.variables.scss
@@ -27,7 +27,7 @@ $cx-window-header-state-style-map: (
 $cx-window-footer-state-style-map: (
    default: (
       background: rgba(246, 246, 246, 0.9),
-      padding: 10px 20px,
+      padding: 10px 15px,
       border-bottom-left-radius: $cx-default-border-radius,
       border-bottom-right-radius: $cx-default-border-radius
    )
